--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "doc": "ENTRYDIR=website kkt build",
     "start": "ENTRYDIR=website kkt start",
-    "build": "npm run build:lib && npm run doc",
+    "build": "npm run build:lib",
     "build:lib": "npm run ts:build && npm run types:esm && npm run types:cjs && npm run css:build",
     "watch": "npm run ts:watch & npm run types:watch & npm run css:watch",
     "types:build": "tsbb types --sourceRoot src --target ESNEXT",
