--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "doc": "ENTRYDIR=website kkt build",
     "start": "ENTRYDIR=website kkt start",
     "build": "npm run build:lib",
-    "build:lib": "npm run ts:build && npm run types:esm && npm run types:cjs && npm run css:build",
-    "watch": "npm run ts:watch & npm run types:watch & npm run css:watch",
+    "build:lib": "npm run ts:build && npm run types:esm && npm run types:cjs",
+    "watch": "npm run ts:watch & npm run types:watch",
     "types:build": "tsbb types --sourceRoot src --target ESNEXT",
     "types:watch": "npm run types:esm -- --watch & npm run types:cjs -- --watch",
     "types:esm": "npm run types:build -- --outDir ../lib/esm",
     "types:cjs": "npm run types:build -- --outDir ../lib/cjs",
-    "css:build": "compile-less -d src -o lib/esm",
-    "css:watch": "compile-less -d src -o lib/esm --watch",
     "ts:watch": "tsbb watch --env-name esm:dev --env-name cjs --target react",
     "ts:build": "tsbb build --target react"
   },
@@ -38,7 +36,6 @@
     "@kkt/loader-raw": "5.11.1",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "compile-less-cli": "1.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "kkt": "5.11.1",
