--- a/package.json
+++ b/package.json
@@ -33,17 +33,21 @@
     "@uiw/react-markdown-preview": "2.1.1",
     "@uiw/react-shields": "1.1.0",
     "@uiw/reset.css": "1.0.4",
-    "@kkt/loader-less": "5.11.1",
-    "@kkt/loader-raw": "5.11.1",
+    "@kkt/less-modules": "6.0.11",
+    "@kkt/raw-modules": "6.0.11",
+    "@kkt/scope-plugin-options": "6.0.11",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "kkt": "5.11.1",
+    "kkt": "6.0.11",
     "tsbb": "1.7.8"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
