--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "module": "lib/esm/index.js",
   "scripts": {
     "prepare": "npm run build",
-    "doc": "ENTRYDIR=website kkt build",
-    "start": "ENTRYDIR=website kkt start",
+    "doc": "kkt build --app-src ./website",
+    "start": "kkt start --app-src ./website",
     "build": "npm run build:lib",
     "build:lib": "npm run ts:build && npm run types:esm && npm run types:cjs",
     "watch": "npm run ts:watch & npm run types:watch",
