--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-node_modules
-lib
+cjs
+esm
 build
+coverage
+node_modules
 npm-debug.log*
 package-lock.json
+
+.eslintcache
 .DS_Store
 .cache
-.rdoc-dist
 .vscode
 
 *.bak
