--- a/package.json
+++ b/package.json
@@ -2,46 +2,44 @@
   "name": "@uiw/react-domain-verify",
   "version": "1.0.2",
   "description": "Verify that the access domain name displays content.",
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
+  "homepage": "https://uiwjs.github.io/react-domain-verify",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
   "scripts": {
     "prepare": "npm run build",
     "doc": "kkt build --app-src ./website",
     "start": "kkt start --app-src ./website",
-    "build": "npm run build:lib",
-    "build:lib": "npm run ts:build && npm run types:esm && npm run types:cjs",
-    "watch": "npm run ts:watch & npm run types:watch",
-    "types:build": "tsbb types --sourceRoot src --target ESNEXT",
-    "types:watch": "npm run types:esm -- --watch & npm run types:cjs -- --watch",
-    "types:esm": "npm run types:build -- --outDir ../lib/esm",
-    "types:cjs": "npm run types:build -- --outDir ../lib/cjs",
-    "ts:watch": "tsbb watch --env-name esm:dev --env-name cjs --target react",
-    "ts:build": "tsbb build --target react"
+    "watch": "tsbb watch",
+    "build": "tsbb build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/uiwjs/react-domain-verify.git"
   },
-  "author": "",
+  "files": [
+    "src",
+    "cjs",
+    "esm"
+  ],
   "license": "MIT",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@uiw/react-github-corners": "1.2.0",
-    "@uiw/react-markdown-preview": "2.1.1",
+    "@uiw/react-github-corners": "1.5.1",
+    "@uiw/react-markdown-preview": "3.3.0",
     "@uiw/react-shields": "1.1.1",
-    "@uiw/reset.css": "1.0.4",
-    "@kkt/less-modules": "6.8.2",
-    "@kkt/raw-modules": "6.8.2",
-    "@kkt/scope-plugin-options": "6.8.2",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
+    "@uiw/reset.css": "1.0.5",
+    "@kkt/less-modules": "6.11.0",
+    "@kkt/raw-modules": "6.11.0",
+    "@kkt/scope-plugin-options": "6.11.0",
+    "@types/react": "17.0.19",
+    "@types/react-dom": "17.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "kkt": "6.8.2",
-    "tsbb": "2.1.2"
+    "kkt": "6.11.0",
+    "tsbb": "3.0.0"
   },
   "eslintConfig": {
     "extends": [
