--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@uiw/react-github-corners": "1.5.3",
-    "@uiw/react-markdown-preview": "3.4.7",
-    "@uiw/react-shields": "1.1.2",
-    "@uiw/reset.css": "1.0.5",
-    "@kkt/less-modules": "7.0.5",
-    "@kkt/raw-modules": "7.0.5",
-    "@kkt/scope-plugin-options": "7.0.5",
-    "@types/react": "17.0.38",
-    "@types/react-dom": "17.0.11",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "kkt": "7.0.5",
-    "tsbb": "3.5.4"
+    "@uiw/react-github-corners": "~1.5.3",
+    "@uiw/react-markdown-preview": "~3.5.1",
+    "@uiw/react-shields": "~1.1.2",
+    "@uiw/reset.css": "~1.0.6",
+    "@kkt/less-modules": "~7.1.1",
+    "@kkt/raw-modules": "~7.1.1",
+    "@kkt/scope-plugin-options": "~7.1.1",
+    "@types/react": "~17.0.39",
+    "@types/react-dom": "~17.0.13",
+    "react": "~17.0.2",
+    "react-dom": "~17.0.2",
+    "kkt": "~7.1.5",
+    "tsbb": "~3.7.2"
   },
   "eslintConfig": {
     "extends": [
