chore(deps): update dependency tsbb to v4 #51
https://github.com/jaywcjlove/tsbb/issues/439

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,11 @@
     "declaration": true,
     "baseUrl": "website",
     "jsx": "react-jsx",
+    "outDir": "cjs",
     "noFallthroughCasesInSwitch": true,
     "noEmit": true
   },
   "include": [
-    "website"
+    "src"
   ]
 }
