--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "homepage": "https://uiwjs.github.io/react-domain-verify",
   "main": "cjs/index.js",
   "module": "esm/index.js",
+  "types": "cjs/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
     "doc": "kkt build --app-src ./website",
     "start": "kkt start --app-src ./website",
-    "watch": "tsbb watch",
-    "build": "tsbb build"
+    "watch": "tsbb watch src/*.tsx --use-babel",
+    "build": "tsbb build src/*.tsx --use-babel"
   },
   "repository": {
     "type": "git",
@@ -27,19 +28,19 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@uiw/react-github-corners": "~1.5.3",
-    "@uiw/react-markdown-preview": "~3.5.1",
-    "@uiw/react-shields": "~1.1.2",
-    "@uiw/reset.css": "~1.0.6",
-    "@kkt/less-modules": "~7.1.1",
-    "@kkt/raw-modules": "~7.1.1",
-    "@kkt/scope-plugin-options": "~7.1.1",
+    "@uiw/react-github-corners": "^1.5.15",
+    "@uiw/react-markdown-preview": "^4.1.10",
+    "@uiw/react-shields": "^1.1.3",
+    "@uiw/reset.css": "^1.0.6",
+    "@kkt/less-modules": "^7.4.9",
+    "@kkt/raw-modules": "^7.4.9",
+    "@kkt/scope-plugin-options": "^7.4.9",
     "@types/react": "~17.0.39",
     "@types/react-dom": "~17.0.13",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
-    "kkt": "~7.1.5",
-    "tsbb": "~3.7.2"
+    "kkt": "^7.4.9",
+    "tsbb": "^4.1.4"
   },
   "eslintConfig": {
     "extends": [
